--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "@tailwindcss/cli": "^4.1.18",
+    "dotenv": "^17.2.3",
+    "tailwindcss": "^4.1.18"
   }
 }
